--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,21 +35,49 @@ html {
 
 
 .table-responsive {
+    background-color: $white;
     overflow: auto;
+    // border-radius: 16px;
+    // -webkit-border-radius: 16px;
+    // -moz-border-radius: 16px;
+    // -ms-border-radius: 16px;
+    // -o-border-radius: 16px;
+    .search-content {
+        width: 100%;
+        margin-bottom: 1rem;
+        input {
+            padding: 10px;
+            font-size: 0.875rem;
+            box-shadow: none !important;
+            &:focus {
+                border-color: #D5D5D5;
+            }
+        }
+    }
 }
 
 table {
     width: 100%;
     vertical-align: middle;
     border-collapse: collapse;
+    font-size: 0.875rem;
     color: $black;
     text-align: center;
     tr {
         background-color: $white;
+        vertical-align: middle;
     }
     th, td {
         padding: 1rem;
         border: 0;
+        vertical-align: middle;
+    }
+    thead {
+        tr {
+            th {
+                font-weight: bold;
+            }
+        }
     }
     tbody {
         tr {
@@ -64,18 +92,25 @@ table {
         }
     }
     .actions {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         button {
             cursor: pointer;
             border: 0;
             background-color: transparent;
         }
         .icon {
+            vertical-align: middle;
             width: 25px;
+            height: 25px;
+            object-fit: contain;
         }
     }
 }
 
 .btn {
+    font-family: "Montserrat", sans-serif;
     cursor: pointer;
     display: inline-block;
     padding: 12px 40px;
@@ -118,7 +153,7 @@ table {
 }
 
 form {
-    input[type='text'] {
+    input[type='text'], input[type='search'] {
         outline: none;
         width: 100%;
         padding: 15px 10px;
@@ -141,7 +176,278 @@ form {
     }
 }
 
+.switch-container {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 54px;
+        height: 28px;
+    }
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        transition: .4s;
+        border-radius: 34px;
+    }
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 21px;
+        width: 21px;
+        left: 4px;
+        bottom: 3px;
+        background-color: white;
+        transition: .4s;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    }
+    input:checked + .slider {
+        background-color: $terteary;
+    }
+    input:checked + .slider:before {
+        transform: translateX(25px);
+        -webkit-transform: translateX(25px);
+        -moz-transform: translateX(25px);
+        -ms-transform: translateX(25px);
+        -o-transform: translateX(25px);
+    }
+}
+
+.modal {
+    font-family: "Montserrat", sans-serif;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(#000, 0.2);
+    .modal-content {
+        background-color: $white;
+        padding: 2rem;
+        width: 90%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        translate: -50% -50%;
+        border-radius: 16px;
+        -webkit-border-radius: 16px;
+        -moz-border-radius: 16px;
+        -ms-border-radius: 16px;
+        -o-border-radius: 16px;
+        box-shadow: 0 0 20px 0 rgba(#000, 0.2);
+    }
+    .modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1rem;
+        h3 {
+            font-weight: 500;
+            margin-bottom: 0;
+        }
+        .btn-close-modal {
+            padding: 0;
+            border: 0;
+            background-color: transparent;
+            cursor: pointer;
+        }
+    }
+    .modal-body {
+        text-align: center;
+        .icon-content {
+            border: 3px solid $quaternary;
+            width: 64px;
+            height: 64px;
+            padding: 0.5rem;
+            margin-right: auto;
+            margin-left: auto;
+            margin-bottom: 2.5rem;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+    }
+    .modal-footer {
+        margin-top: 2rem;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        button {
+            padding-left: 60px;
+            padding-right: 60px;
+        }
+    }
+    &.show-modal {
+        .modal-content {
+            //animation: pulse 1s forwards;
+            //-webkit-animation: pulse 1s forwards;
+            animation: heartBeat 1.5s forwards;
+            -webkit-animation: heartBeat 1.5s forwards;
+            //animation: rubberBand 1.5s forwards;
+            //-webkit-animation: rubberBand 1.5s forwards;
+        }
+    }
+} 
+
+
 .invalid-feedback {
     margin-top: 0.5rem;
     color: red;
 }
+
+
+@media(min-width:1200px) {
+    .modal {
+        .modal-content {
+            width: 50%;
+        }
+    } 
+
+    .table-responsive {
+        .search-content {
+            width: 50%;
+        }
+    }
+}
+
+
+//ANIMATIONS
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+}
+
+@keyframes heartBeat {
+    0% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+    14% {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+    28% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+    42% {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+    70% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+}
+
+@keyframes rubberBand {
+    0% {
+        transform: scale3d(1, 1, 1);
+        -webkit-transform: scale3d(1, 1, 1);
+        -moz-transform: scale3d(1, 1, 1);
+        -ms-transform: scale3d(1, 1, 1);
+        -o-transform: scale3d(1, 1, 1);
+    }
+    30% {
+        transform: scale3d(1.25, 0.75, 1);
+        -webkit-transform: scale3d(1.25, 0.75, 1);
+        -moz-transform: scale3d(1.25, 0.75, 1);
+        -ms-transform: scale3d(1.25, 0.75, 1);
+        -o-transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+        transform: scale3d(0.75, 1.25, 1);
+        -webkit-transform: scale3d(0.75, 1.25, 1);
+        -moz-transform: scale3d(0.75, 1.25, 1);
+        -ms-transform: scale3d(0.75, 1.25, 1);
+        -o-transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+        transform: scale3d(1.15, 0.85, 1);
+        -webkit-transform: scale3d(1.15, 0.85, 1);
+        -moz-transform: scale3d(1.15, 0.85, 1);
+        -ms-transform: scale3d(1.15, 0.85, 1);
+        -o-transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+        transform: scale3d(.95, 1.05, 1);
+        -webkit-transform: scale3d(.95, 1.05, 1);
+        -moz-transform: scale3d(.95, 1.05, 1);
+        -ms-transform: scale3d(.95, 1.05, 1);
+        -o-transform: scale3d(.95, 1.05, 1);
+    }
+    75% {
+        transform: scale3d(1.05, .95, 1);
+        -webkit-transform: scale3d(1.05, .95, 1);
+        -moz-transform: scale3d(1.05, .95, 1);
+        -ms-transform: scale3d(1.05, .95, 1);
+        -o-transform: scale3d(1.05, .95, 1);
+    }
+    100% {
+        transform: scale3d(1, 1, 1);
+        -webkit-transform: scale3d(1, 1, 1);
+        -moz-transform: scale3d(1, 1, 1);
+        -ms-transform: scale3d(1, 1, 1);
+        -o-transform: scale3d(1, 1, 1);
+    }
+}
+
